syntax = "proto3";

package codesourcerer_bot.genai;

option go_package = "github.com/codesourcerer-bot/proto/generated";

import "shared.proto";

service GenAiService {
  rpc GenerateTestFiles(GithubContextRequest) returns (GeneratedTestsResponse) {}
}

message BasicConfig  {
  string test_directory = 1;
  bool comments = 2;
  string testing_framework = 4;
  bool water_mark = 5;
}

message Configuration {
  BasicConfig configuration = 1;
  map<string,string> extras = 2;
}

message GithubContextRequest {
  string merge_id = 1;
  string context = 2;
  Configuration config = 3;
  repeated codesourcerer_bot.shared.SourceFilePayload files = 4;
}

message GeneratedTestsResponse {
  repeated codesourcerer_bot.shared.TestFilePayload tests = 1;
}